--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,12 @@
-name: Release
+name: Release 🚢
 
 on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
       - "v[0-9]+.[0-9]+.[0-9]+-[a-z]+"
+    branches:
+      - '*-rc[0-9]*'
   workflow_dispatch:
     inputs:
       tag:
@@ -16,27 +18,43 @@ permissions:
   contents: write
 
 env:
-  RUSTC_WRAPPER: sccache
-  SCCACHE_S3_USE_SSL: ${{ secrets.CACHE_SSL }}
   GIT_LFS_SKIP_SMUDGE: 1
   CARGO_INCREMENTAL: 0
   RUST_BACKTRACE: full
-  SCCACHE_BUCKET: namada-cache
-  SCCACHE_ENDPOINT: ${{ secrets.CACHE_ENDPOINT }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.CACHE_ACCESS_KEY }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.CACHE_SECRET_KEY }}
-  AWS_REGION: us-east-1
 
 jobs:
-  build:
+  wasm:
+    runs-on: [ubuntu-latest]
+    container: 
+      image:  ghcr.io/heliaxdev/namada-ci:wasm-main
+      options: --user 1001
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - run: git fetch --tags --force origin # WA: https://github.com/actions/checkout/issues/882
+    - name: Switch to tag if specified
+      if: "${{ github.event.inputs.tag != '' }}"
+      run: git checkout ${{ github.event.inputs.tag }}
+    - name: Build wasm
+      run: make build-wasm-scripts
+    - name: Upload wasm artifacts 
+      uses: actions/upload-artifact@v4
+      with:
+        name: wasm-${{ github.sha }}
+        path: |
+          wasm/tx_*.wasm
+          wasm/vp_*.wasm
+          wasm/checksums.json
+
+  binaries:
     runs-on: ${{ matrix.os }}
+    needs: [wasm]
     strategy:
       fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        make:
-          - name: Build package
-            command: package
 
     steps:
       - name: Checkout repo
@@ -47,75 +65,44 @@ jobs:
       - name: Switch to tag if specified
         if: "${{ github.event.inputs.tag != '' }}"
         run: git checkout ${{ github.event.inputs.tag }}
-      - name: Install libudev (Linux)
+      - name: Install dependencies
         if: startsWith(runner.os, 'Linux')
         run: sudo apt-get update && sudo apt-get -y install libudev-dev
-      - name: Install Protoc
-        uses: heliaxdev/setup-protoc@v2
+      - name: Install protobuf
+        uses: arduino/setup-protoc@v3
         with:
-          version: "25.0"
+          version: "25.x"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Run sccache-cache
-        uses: mozilla-actions/sccache-action@v0.0.4
+      - uses: taiki-e/install-action@v2
         with:
-          version: "v0.7.7"
-      - name: Setup rust toolchain
-        uses: oxidecomputer/actions-rs_toolchain@ad3f86084a8a5acf2c09cb691421b31cf8af7a36
-        with:
-          profile: minimal
-          override: true
-      - name: Cache cargo registry
-        uses: actions/cache@v3
-        continue-on-error: false
-        with:
-          path: |
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-          key: ${{ runner.os }}-${{ github.job }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - name: Start sccache server
-        run: sccache --start-server
+          tool: cargo-binstall
       - name: Install cargo-about
-        if: "!startsWith(runner.os, 'Windows')"
-        run: curl -k https://installer.heliax.click/EmbarkStudios/cargo-about@0.6.1! | bash
-      - name: Install cargo-about (only windows)
-        if: startsWith(runner.os, 'Windows')
-        run: cargo install --locked cargo-about
-      - name: ${{ matrix.make.name }}
-        run: make ${{ matrix.make.command }}
+        run: cargo binstall cargo-about --no-confirm
+      - name: Download wasm artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: wasm-${{ github.sha }}
+          path: wasm
+      - name: Build release package for ${{ matrix.os }}
+        run: make package
       - name: Upload binaries package
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: release-${{ matrix.os }}-${{ github.sha }}
           path: ./*.tar.gz
-      - name: Print sccache stats
-        if: always()
-        run: sccache --show-stats || true
-      - name: Stop sccache server
-        if: always()
-        run: sccache --stop-server || true
-      - name: Clean cargo cache
-        run: |
-          cargo install cargo-cache --no-default-features --features ci-autoclean cargo-cache
-          cargo-cache
 
   release:
-    needs: build
-    runs-on: ${{ matrix.os }}
-    if: success() || failure()
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
+    needs: [binaries]
+    runs-on: [ubuntu-latest]
+    if: always() && startsWith(github.ref, 'refs/tags/v') 
 
     steps:
       - id: get_version
         uses: battila7/get-version-action@v2
       - name: Download release artifacts
-        uses: actions/download-artifact@v3
-      - name: Create release
-        uses: softprops/action-gh-release@v1
+        uses: actions/download-artifact@v4
+      - name: Create github release
+        uses: softprops/action-gh-release@v2
         with:
           draft: true
           files: ./**/*.tar.gz
