--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
       - "v[0-9]+.[0-9]+.[0-9]+-[a-z]+"
+  pull_request:
     branches:
       - '*-rc[0-9]*'
 
@@ -66,7 +67,13 @@ jobs:
         if: "${{ github.event.inputs.tag != '' }}"
         run: git checkout ${{ github.event.inputs.tag }}
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get -y install libudev-dev protobuf-compiler pkg-config libssl-dev clang-tools clang
+        if: startsWith(runner.os, 'Linux')
+        run: sudo apt-get update && sudo apt-get -y install libudev-dev
+      - name: Install protobuf
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "25.x"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: taiki-e/install-action@v2
         with:
           tool: cargo-binstall
