--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ env:
 jobs:
   changelog:
     runs-on: [ubuntu-latest]
+    if: github.event.pull_request.draft == false 
 
     steps:
       - name: Checkout repo
