--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Check changelog
-        run: sh .github/workflows/scripts/check-changelog.log
+        run: sh .github/workflows/scripts/check-changelog.sh
 
   lints:
     container: 
